--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "keywords": [],
   "main": "src/index.tsx",
   "dependencies": {
+    "@remix-run/router": "^1.15.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-router-dom": "6.21.1",
+    "react-router-dom": "^6.21.1",
     "react-scripts": "^5.0.1"
   },
   "devDependencies": {
