--- a/package.json
+++ b/package.json
@@ -6,10 +6,16 @@
   "main": "src/index.tsx",
   "dependencies": {
     "@remix-run/router": "^1.15.1",
+    "assert": "^2.1.0",
+    "axios": "^1.6.7",
+    "https-browserify": "^1.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.21.1",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.3"
   },
   "devDependencies": {
     "@types/react": "18.2.38",
