--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@fullcalendar/daygrid": "^6.1.11",
+    "@fullcalendar/interaction": "^6.1.11",
+    "@fullcalendar/list": "^6.1.11",
+    "@fullcalendar/react": "^6.1.11",
+    "@fullcalendar/timegrid": "^6.1.11",
     "@mui/icons-material": "^5.15.13",
     "@mui/material": "^5.15.13",
     "@mui/styled-engine-sc": "^6.0.0-alpha.17",
@@ -20,10 +25,10 @@
     "assert": "^2.1.0",
     "axios": "^1.6.7",
     "https-browserify": "^1.0.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-pro-sidebar": "^0.7.1",
-    "react-router-dom": "^6.21.1",
+    "react-router-dom": "^6.22.1",
     "react-scripts": "^5.0.1",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
@@ -31,10 +36,10 @@
     "url": "^0.11.3"
   },
   "devDependencies": {
-    "@types/react": "18.2.38",
-    "@types/react-dom": "18.0.9",
-    "loader-utils": "3.2.1",
-    "typescript": "4.4.2"
+    "@types/react": "^18.2.38",
+    "@types/react-dom": "^18.0.9",
+    "loader-utils": "^3.2.1",
+    "typescript": "^4.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
