Set up GitHub Actions for deployment

--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "react",
   "version": "1.0.0",
+  "private": true,
+  "homepage": "https://GopinathVasan.github.io/Austin-Project-Front-End",
   "description": "",
   "keywords": [],
   "main": "src/index.tsx",
